--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aplikasi Cuaca</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
 
+  <body class="bg-blue-50 min-h-screen flex items-center justify-center">
+
+  <div class="bg-white p-6 rounded-2xl shadow-lg w-full max-w-md text-center">
+    <h1 class="text-2xl font-bold text-blue-700 mb-4">Your Anime</h1>
+
+    <input type="text" id="city" placeholder="Masukkan nama kota"
+      class="border w-full px-3 py-2 rounded mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400">
+
+    <button onclick="getWeather()" 
+      class="w-full bg-blue-500 hover:bg-blue-600 text-white py-2 rounded-lg">
+      Cari Cuaca
+    </button>
+
+    <div id="result" class="mt-6 text-lg text-gray-700"></div>
+  </div>
